--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.10.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
